@@ -24,12 +24,12 @@
 		<code>uninstall.php</code>
 	</uninstall>
 	
-	<install for="2.0 RC2">
+	<install for="2.0 RC2,2.0 RC3">
 		<readme parsebbc="true">readme-install.bbc</readme>
 		<modification>Sources-SMF2-0.xml</modification>
 		<code>install.php</code>
 	</install>
-	<uninstall for="2.0 RC2">>
+	<uninstall for="2.0 RC2,2.0 RC3">
 		<modification reverse="true">Sources-SMF2-0.xml</modification>
 		<code>uninstall.php</code>
 	</uninstall>
